--- a/style.css
+++ b/style.css
@@ -3,26 +3,31 @@
   margin: 0;
   padding: 0;
 }
+.invisible {
+  display: none;
+}
 body {
-max-width: 700px;
+  font-family: "Press Start 2P", system-ui;
+  max-width: 430px ;
+  height: 100vh;
+width: 100vh;
 margin:2px auto;
 display: grid;
 grid-template-columns: 1fr 1fr;
-grid-template-rows: 0.3fr 1fr 1fr;
+grid-template-rows: 0.2fr 1fr 0.6fr;
 grid-template-areas: 
 "header header" 
 "main aside"
 "teclado teclado";
-min-height: 100vh
+
 }
 
 header {
   grid-area: header;
-  height: 70px;
   display: flex;
   justify-content: space-between;
   position: relative;
-  border: 1px solid green;
+  background-color: hotpink;
 }
 h1 {
  margin: 2px auto;
@@ -38,31 +43,143 @@ header button {
   right: 0;
   bottom: 0;
 }
-aside {
+main {
+  position: relative;
+  min-height: 40%;
+  grid: main;
+  background-color: aqua;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.aElegir {
+main img {
+  max-width: 90% ;
+
+}
+.acierto {
+  position: absolute;
+  color: rgb(130, 236, 9);
+  top: 60%;
+  right: 25%;
+  height: 100px;
+  font-size: 10px;
+  animation: acierto 0.65s ease-in 
+}
+
+
+aside {
+  background-color: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.adivinar {
   border: 3px solid red;
-  font-size: 50px;
+  font-size: 20px;
   grid-area: palabras;
-  letter-spacing: 10px;
-  padding: 5px;
+  letter-spacing: 3px;
+  margin: 1px auto;
+  padding: 3px;
 }
 .teclado {
-  padding: 2px;
+  position: relative;
+  background-color: rgb(111, 79, 161);
+  padding: 1px;
   border: 1px solid black;
   grid-area: teclado;
   display: grid;
   grid-template-columns: repeat(9 ,1fr);
   align-items: center;
+  gap: 1px;
 }
-.teclado div {
-  max-height: 30%;
+
+.cajaGanadora button, .cajaPerdedora button{
+  position: absolute;
+  padding: 3px;
+  top: 45%;
+  right: 5%;
+ 
+  min-width: 7%;
+  min-height: 15%;
+  font-size: 20px;
+  border-radius: 15%;
+
+}
+.teclado .cajaGanadora, .teclado .cajaPerdedora{
+ 
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  position: absolute;
+}
+
+
+.letra {
+  font-size: 18px;
+  min-height: 50%;
+  max-height: 40%;
   padding: 2px;
   border: 1px solid blue;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  border-radius: 20%;
+  
+}
+.ganaste, .perdiste {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+  position: absolute;
+  color: rgb(130, 236, 9);
+  top: 45%;
+  right: 50%;
+  height: 100px;
+  font-size: 20px;
+}
+.invisible {
+  display: none;
+}
+.teclado .invisible {
+  display: none;
+}
+.usedLetterGood {
+  background-color: rgb(157, 245, 26);
+}
+.usedLetterBad {
+  background-color: red;
+}
+@keyframes acierto {
+  25%{
+    
+    color: rgb(10, 228, 228);
+
+  }
+  50% { 
+    scale: 1.8;
+    color: rgb(12, 214, 12);
+  }
+  100%{
+    scale: 1;
+
+  }
+}
+
+@keyframes victo {
+  25%{
+    color: rgb(10, 228, 228);
+
+  }
+  50% { 
+    scale: 1.7;
+    color: rgb(12, 214, 12);
+  }
+  100%{
+    scale: 1;
+
+  }
 }
