--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ button {
   display: none;
 }
 body {
-  background-image: url(posible.bg.jpg);
+  background-image: url(posible-segunda_bg.png);
   font-family: "Press Start 2P", system-ui;
   max-width: 430px ;
   height: 100vh;
@@ -23,7 +23,9 @@ grid-template-areas:
 "header header" 
 "main aside"
 "teclado teclado";
-
+-webkit-box-shadow: -24px -86px 184px -14px rgba(204,255,51,1);
+-moz-box-shadow: -24px -86px 184px -14px rgba(204,255,51,1);
+box-shadow: -24px -86px 184px -14px rgba(204,255,51,1);
 }
 
 header {
@@ -33,7 +35,7 @@ header {
   display: flex;
   justify-content: space-between;
   position: relative;
-  background: linear-gradient(180deg, rgba(165,255,214,1) 13%, rgba(132,220,198,1) 97%);
+  background: linear-gradient(180deg, rgb(250, 246, 22) 9%, rgba(255,183,0,1) 100%);
 }
 h1 {
  margin: 2px auto;
@@ -62,7 +64,7 @@ main {
   position: relative;
   min-height: 40%;
   grid: main;
-  background-color: #7ae581ec;
+  background-color: #b9ffb6c2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +77,7 @@ main img {
 
 
 aside {
-  background-color: #25a18eef;
+  background-color: #b9ffb6c2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -93,7 +95,7 @@ aside {
   border-bottom-left-radius: 5vh ;
   border-bottom-right-radius: 5vh;
   position: relative;
-  background: linear-gradient(180deg, rgb(39, 209, 132) 13%, rgb(111, 218, 191) 97%);
+  background: linear-gradient(180deg, rgb(255, 251, 8) 9%, rgba(255,183,0,1) 100%);
   padding: 1px;
   border: 1px solid black;
   grid-area: teclado;
